--- a/presentations/introToGaming_part1.html
+++ b/presentations/introToGaming_part1.html
@@ -61,17 +61,29 @@
         </section>
 
         <!-- Course Outline -->
-        <!-- <section>
-          <h3>Course Outline</h3>
+        <section>
+          <h3>Part 1 Outline</h3>
           <p>
             <ul>
-              <li>Part 1 - Structure of a Game</li>
-              <li>Part 2 - Physics</li>
-              <li>Part 3 - Enemies</li>
-              <li>Part 4 - Optimization</li>
+              <li>
+                  Core Structure of a Game
+                  <ul>
+                      <li>Game Loop</li>
+                      <li>Player Input</li>
+                      <li>Rendering Order</li>
+                  </ul>
+              </li>
+                <li>
+                    Physics
+                    <ul>
+                        <li>Circle on Circle</li>
+                        <li>AABB on AABB</li>
+                        <li>Circle on AABB</li>
+                    </ul>
+                </li>
             </ul>
           </p>
-        </section> -->
+        </section>
 
         <!-- What is a Game? -->
         <section>
@@ -498,7 +510,17 @@ let applyGravity = function(deltaTime, entity) {
         <section>
             <section>
                 <h3>Circle on Circle</h3>
-                <img src="image/introToGame_1/physics/circle_circle/circle_circle.png" style="height:500px" />
+                <img src="image/introToGame_1/physics/circle_circle/circle.png" style="height:500px" />
+            </section>
+
+            <section>
+                <h3>Circle on Circle</h3>
+                <img src="image/introToGame_1/physics/circle_circle/circle_no_hit.png" style="height:500px" />
+            </section>
+
+            <section>
+                <h3>Circle on Circle</h3>
+                <img src="image/introToGame_1/physics/circle_circle/circle_hit.png" style="height:500px" />
             </section>
 
             <section>
