--- a/presentations/introToGaming_part1.html
+++ b/presentations/introToGaming_part1.html
@@ -36,7 +36,7 @@
     <![endif]-->
 </head>
 
-<body class="ai-pres">
+<body class="intro-to-gaming">
 <div class="reveal">
     <div class="slides">
         <!-- Intro -->
