Added last images.

--- a/presentations/introToGaming_part4.html
+++ b/presentations/introToGaming_part4.html
@@ -338,7 +338,7 @@ let alignment = function(currentEntity, otherEntities) {
                 <h3>Autonomous Movement - Wander</h3>
                 <br>
                 <p>
-                    TODO: Make wander slides
+                    <img src="./image/introToGame_4/wander.png" style="height:500px;"/>
                 </p>
             </section>
             <section>
