--- a/apps/cucumberNameGen/index.html
+++ b/apps/cucumberNameGen/index.html
@@ -55,6 +55,6 @@
             printOutput(finalWord);
         };
 
-        document.onload = () => { document.getElementById('createTemplateButton').addEventListener('click', createTemplate); }
+        window.onload = () => { document.getElementById('createTemplateButton').addEventListener('click', createTemplate); }
     </script>
 </html>
