--- a/apps/txt2regiletter/index.html
+++ b/apps/txt2regiletter/index.html
@@ -14,7 +14,7 @@
         <script src="dist/app.js" defer></script>
     </head>
     <body>
-        <textArea id="stringInput" class="template"></textArea>
+        <textArea id="stringInput" class="template">ABCDEFGHIJKLMNOPQRSTUVWXYZ ?!.</textArea>
         <button id="createStringButton">Make My Emojis!</button>
         <textArea id="stringOutput" class="template"></textArea>
     </body>
